--- a/about.html
+++ b/about.html
@@ -1,15 +1,7 @@
 <html>
 <body>
 	<h1>About Page - Introduction to company</h1>
-	<p>The quick brown fox jumps right over the lazy dog. 
-		The quick brown fox jumps right over the lazy dog. 
-		The quick brown fox jumps right over the lazy dog. 
-		The quick brown fox jumps right over the lazy dog. 
-		The quick brown fox jumps right over the lazy dog. 
-		The quick brown fox jumps right over the lazy dog. 
-		The quick brown fox jumps right over the lazy dog. 
-		The quick brown fox jumps right over the lazy dog. 
-		The quick brown fox jumps right over the lazy dog. </p>
+	<p>The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. </p>
 
 </body>
 </html>
