--- a/about.html
+++ b/about.html
@@ -3,5 +3,14 @@
 	<h1>About Page - Introduction to company</h1>
 	<p>The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. The quick brown fox jumps right over the lazy dog. </p>
 
+	
+	<div class="outer">
+		<div class="left">
+			Left Box
+		</div>
+		<div class="right">
+			Right Box
+		</div>
+	</div>
 </body>
 </html>
