--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
 	
 	<div class="outer">
 		<div class="left">
-			Left Box
+			Left Box Good
 		</div>
 		<div class="right">
-			Right Box
+			Right Box Good
 		</div>
 	</div>
 </body>
